--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ deploy:
   provider: script
   skip_cleanup: true
   script:
-  - curl -T ip_print-0.0.$TRAVIS_BUILD_NUMBER-Linux.deb -umohammadwolf95:$BINTRAY_API_KEY "https://bintray.com/mohammadwolf95/grasp/grasp_package/$TRAVIS_BUILD_NUMBER/grasp_mvc-0.0.$TRAVIS_BUILD_NUMBER-Liux.deb;deb_distribution=trusty;deb_component=main;deb_architecture=amd64;publish=1"
+  - curl -T ip_print-0.0.$TRAVIS_BUILD_NUMBER-Linux.deb -umohammadwolf95:$BINTRAY_API_KEY "https://api.bintray.com/content/mohammadwolf95/grasp/grasp_package/$TRAVIS_BUILD_NUMBER/grasp_mvc-0.0.$TRAVIS_BUILD_NUMBER-Liux.deb;deb_distribution=trusty;deb_component=main;deb_architecture=amd64;publish=1"
   - provider: pages
     skip-cleanup: true
     github-token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
